7311: Fix DownloadReceiptsStep when using peer task system
Signed-off-by: Matilda Clerke <matilda.clerke@consensys.net>